# retreat_2026

./: .gitignore  .pre-commit-config.yaml  README.md  README2.md  main.py  pyproject.toml  requirements.txt
data/elastic_net/: taste_samples.csv
data/isolationforest/: GTEx_Analysis_gene_median_tpm_filtered.csv
data/kernel_pca/: psychedelics_molecules.csv
data/pls_regression/: antipsychotics.csv
data/plsr/: hallucinome.csv
data/quantile_regression/: admet_descriptors.csv
data/spectral_clustering/: adjacency_matrix.tsv  feature_matrix_diagnostics.json  row_labels.txt
notebooks/: elastic_net.ipynb  imblearn.ipynb  isolation_forest.ipynb  isolationforest.ipynb  kernel_pca.ipynb  pls_regression.ipynb  plsr.ipynb  quantile_regression.ipynb  spectral_clustering.ipynb
src/: elastic_net.py  isolation_forest.py  spectral_clustering.py  utils.py
tests/: test_utils.py
